// --- IDENTITY SYSTEM (AUTH & PROFILES) ---

Table users {
  id integer [primary key]
  email varchar [unique]
  password_hash varchar
  created_at timestamp
}

Table students {
  id integer [primary key]
  user_id integer [unique]
  student_number varchar [unique]
  name varchar
}

Table professors {
  id integer [primary key]
  user_id integer [unique]
  name varchar
  location_id integer
}

Table laac_staff {
  id integer [primary key]
  user_id integer [unique]
  name varchar
  is_admin boolean [default: false]
  support_phone varchar
}

// --- LAAC STAFF DEPARTMENTS ---

Table devs {
  id integer [primary key]
  staff_id integer [unique]
  specialization varchar
}

Table testers {
  id integer [primary key]
  staff_id integer [unique]
  test_type varchar
}

Table marketing {
  id integer [primary key]
  staff_id integer [unique]
  focus_channel varchar
}

Table frontdesk {
  id integer [primary key]
  staff_id integer [unique]
  shift varchar
}

// --- ORGANIZATIONS AND COMMUNITY ---

Table organizations {
  id integer [primary key]
  name varchar [not null]
  type varchar [not null]
  description text
  location_id integer
  creation_date date
}

Table organization_members {
  id integer [primary key]
  organization_id integer
  user_id integer
  role varchar [default: 'Member']
  can_manage_events boolean [default: false]
  join_date timestamp [default: `now()`]
}

// --- SOCIAL NETWORK AND COMMUNICATION ---

Table posts {
  id integer [primary key]
  user_id integer
  content text [not null]
  image_url varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table post_comments {
  id integer [primary key]
  post_id integer
  user_id integer
  content text [not null]
  created_at timestamp [default: `now()`]
}

Table post_likes {
  id integer [primary key]
  post_id integer
  user_id integer
  created_at timestamp [default: `now()`]
}

Table direct_messages {
  id integer [primary key]
  sender_id integer
  receiver_id integer
  content text [not null]
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table user_connections {
  id integer [primary key]
  follower_id integer
  followed_id integer
  status varchar [default: 'accepted']
  created_at timestamp [default: `now()`]
}

// --- INFRASTRUCTURE AND ORIENTATION ---

Table locations {
  id integer [primary key]
  building varchar
  floor varchar
  room_code varchar [unique]
  description varchar
  geojson text
}

// --- ACADEMIC STRUCTURE (REFORMULADO) ---

Table courses {
  id integer [primary key]
  name varchar
  acronym varchar
}

Table subjects {
  id integer [primary key]
  course_id integer
  professor_id integer
  name varchar
  code varchar
}

// Agora o Semestre é a entidade principal e contém o Ano
Table semesters {
  id integer [primary key]
  semester_number integer // 1 ou 2
  academic_year varchar // Ex: "2023/2024"
  start_date date
  end_date date
}

// --- CLASS LOGISTICS ---

Table classes {
  id integer [primary key]
  subject_id integer
  location_id integer
  type varchar
  weekday integer
  start_time time
  end_time time
}

// --- ENROLLMENTS ---

Table enrollments {
  id integer [primary key]
  student_id integer
  course_id integer
  class_id integer
  semester_id integer
  enrollment_date timestamp
}

// --- EVENTS ---

Table events {
  id integer [primary key]
  title varchar [not null]
  description text
  start_at timestamp [not null]
  end_at timestamp
  organization_id integer [not null]
  location_id integer
}

Table event_partners {
  id integer [primary key]
  event_id integer [not null]
  partner_id integer [not null]
  sponsorship_details varchar
}

// --- ADDITIONAL SERVICES ---

Table partners {
  id integer [primary key]
  name varchar [not null]
  type varchar [not null]
  description text
  discount_for_students varchar
  verified boolean [default: false]
}

Table files {
  id integer [primary key]
  owner_id integer
  path varchar [not null]
  type varchar [not null]
  access_restrictions varchar [default: 'public']
}

// --- RELATIONSHIPS (ATUALIZADOS) ---

Ref: students.user_id - users.id
Ref: professors.user_id - users.id
Ref: laac_staff.user_id - users.id
Ref: devs.staff_id - laac_staff.id
Ref: testers.staff_id - laac_staff.id
Ref: marketing.staff_id - laac_staff.id
Ref: frontdesk.staff_id - laac_staff.id

Ref: organization_members.organization_id > organizations.id
Ref: organization_members.user_id > users.id
Ref: posts.user_id > users.id
Ref: post_comments.post_id > posts.id
Ref: post_comments.user_id > users.id
Ref: post_likes.post_id > posts.id
Ref: post_likes.user_id > users.id
Ref: direct_messages.sender_id > users.id
Ref: direct_messages.receiver_id > users.id
Ref: user_connections.follower_id > users.id
Ref: user_connections.followed_id > users.id
Ref: organizations.location_id > locations.id

Ref: professors.location_id > locations.id
Ref: classes.location_id > locations.id
Ref: subjects.professor_id > professors.id
Ref: subjects.course_id > courses.id
Ref: classes.subject_id > subjects.id
Ref: enrollments.student_id > students.id
Ref: enrollments.course_id > courses.id
Ref: enrollments.class_id > classes.id
Ref: enrollments.semester_id > semesters.id // Ligação direta ao semestre/ano

Ref: events.organization_id > organizations.id
Ref: events.location_id > locations.id
Ref: event_partners.event_id > events.id
Ref: event_partners.partner_id > partners.id
Ref: files.owner_id > users.id